--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
 
     implementation 'com.github.nkzawa:socket.io-client:0.3.0'
+    implementation 'androidx.core:core-ktx:1.0.0-alpha1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
 }
